// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBanner should render with many props assigned 1`] = `
<div
  className="pt-20 min-h-[60vh] test Container secondary fullViewportHeight"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://operation-code-assets.s3.us-east-2.amazonaws.com/heroBanner/stock_family-2.jpg)",
    }
  }
>
  <div
    className="content"
  >
    <h1
      className="border-b-4 border-b-primary text-center"
      data-testid="HERO_BANNER_H1"
    >
      Test
    </h1>
    Testing 123
  </div>
</div>
`;

exports[`HeroBanner should render with required props 1`] = `
<div
  className="pt-20 min-h-[60vh] min-h-[35vh] Container secondary"
>
  <div
    className="content"
  >
    <h1
      className=""
      data-testid="HERO_BANNER_H1"
    >
      Test
    </h1>
  </div>
</div>
`;
